--- a/Lesson06-Visualizer-Preferences/T06.07-Exercise-ListPreference/app/src/main/res/xml/pref_visualizer.xml
+++ b/Lesson06-Visualizer-Preferences/T06.07-Exercise-ListPreference/app/src/main/res/xml/pref_visualizer.xml
@@ -23,6 +23,12 @@
         android:summaryOn="@string/pref_show_true"
         android:title="@string/pref_show_treble_label" />
 
-    <!-- TODO (1) Add a list preference -->
+    <!-- COMPLETED (1) Add a list preference -->
+    <ListPreference
+        android:defaultValue="@string/pref_color_default"
+        android:key="@string/pref_color_key"
+        android:entries="@array/set_color_labels"
+        android:entryValues="@array/set_color_values"
+        android:title="@string/pref_choose_color_label" />
 
 </PreferenceScreen>
